@@ -29,6 +29,7 @@ New user-visible features
   The allocator places nodes randomly but in a manner that rejects positions
   that are located within buildings defined in the scenario.
 - (tcp) Added PRR as recovery algorithm
+- (wifi) Add a new trace source to StaWifiMac to trace beacon arrivals
 
 Bugs fixed
 ----------
